24/04/2025:
	- Inject rights statement from COPYRIGHT into image metadata if this does not already exist to allow
	  Compressor classes to include this in image output metadata


23/04/2025:
	- Modification to not add 'color' to IIIF extraQualities field in info.json if image is monochrome


22/04/2025:
	- Added convolution to JTL tile pipeline and switched convolution implementation to use edge extension
	  rather than edge wrapping


20/04/2025:
	- Fixed typo in configure.ac.
	- Added TIFF to IIIF extraFormats field plus other cleanups in info.json.


18/04/2025:
	- Make sure sizes are correctly rounded when checking for invalid upscaling


02/04/2025:
	- Fix to use explicit compression types in setQuality() function in TIFFCompressor class.
	- Add extra error checking and correctly assign dataLength to Rawtile after region creation.


29/03/2025:
	- Update to Doxygen code documentation


25/03/2025:
	- Added missing quality level copy to output from TIFF encoding.
	- Switched STL container element addition to std::move to enable faster move semantics


24/02/2025:
	- Minor cleanups to improve constructor initialization and remove unused variables


22/02/2025:
	- Updated CIELAB decoding to fully handle 8 and 16 bit as well as floating point images.
	- Added new sRGB2LAB() function.


20/02/2025:
	- Re-ordered initializer lists in Watermark class constructor.
	- Minor tweak to ICC embedding code to improve logging output.


19/02/2025:
	- Refactor of watermarking code to allow it to be applied to JPEG2000 and JPEG source images when
	  requesting a region through the CVT function. Watermarking now applied as the very final step after
	  all other processing carried out and if image dimensions are greater than 2x the tile size of the
	  source image, the image is divided into blocks and multiple watermarks applied, one per block.
	  Resolves https://github.com/ruven/iipsrv/issues/255. Implementation partially derived from